# Graduate

./: .gitignore  CMakeLists.txt  README.md  SweepMethod.sln
SweepMethod/: AbstractSweepMethod.h  Instrumental.cpp  Instrumental.h  NumericalMethodInstrumental.h  ParallelInstrumental.cpp  ParallelInstrumental.h  ParallelSweepMethod.cpp  ParallelSweepMethod.h  Profiler.h  SerialInstrumental.cpp  SerialInstrumental.h  SerialSweepMethod.cpp  SerialSweepMethod.h  SweepMethod.vcxproj  SweepMethod.vcxproj.filters  TestRunner.h  UnitTests.h  main.cpp
SweepMethod/main/: Application.cpp  main.cpp
SweepMethod/main/impl/: Instrumental.cpp
SweepMethod/main/impl/parallel/: ParallelInstrumental.cpp  ParallelSweepMethod.cpp
SweepMethod/main/impl/serial/: SerialInstrumental.cpp  SerialSweepMethod.cpp
SweepMethod/main/impl/tools/: Instrumental.cpp
SweepMethod/main/interfaces/: AbstractSweepMethod.h  Instrumental.h  Task.h
SweepMethod/main/interfaces/parallel/: ParallelInstrumental.h  ParallelSweepMethod.h
SweepMethod/main/interfaces/serial/: SerialInstrumental.h  SerialSweepMethod.h
SweepMethod/main/interfaces/tools/: Instrumental.h
SweepMethod/test/: ParallelAlgorithmComponentTest.h  Profiler.h  SerialAlgorithmComponentTest.h  TestRunner.h  UnitTests.h
SweepMethod/test/common/: BaseComponentTest.h  MeasureTimeComponentTest.h  TestRunner.h
graduatework/: Application.cpp
graduatework/algo/impl/: Instrumental.cpp
graduatework/algo/impl/parallel/: ParallelInstrumental.cpp  ParallelSweepMethod.cpp
graduatework/algo/impl/serial/: SerialSweepMethod.cpp
graduatework/algo/interfaces/: Instrumental.h
graduatework/algo/interfaces/parallel/: ParallelInstrumental.h  ParallelSweepMethod.h
graduatework/fstreams/data/: halfLayer.txt  mainLayer.txt
graduatework/fstreams/interfaces/: FWork.h
graduatework/fstreams/other/: appCin.txt  appParams.txt  appV1.txt  defineParams.txt  executeLayer.txt  executeSerialCoommonSweepLayers.txt  mainApp.txt
graduatework/task/impl/: Area.h  Grid.h  Parameters.h  System.h  Task.h
graduatework/task/interfaces/: InitConditions.h  System.h  Task.cpp  Task.h
graduatework/task/interfaces/tools/: Area.h  Grid.h  Parameters.h
graduatework/test/: ParallelAlgorithmComponentTest.h  SerialAlgorithmComponentTest.h
